$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Bug fixes: call getPostValue in verious form handling files
 - Added new 'Security Audit' page.
 - Fixed bug: external users with no email address get squished into a single
   user on second edit
 - Apply [ 1900716 ] themes not sticking if auth_http true
 - Apply PATCH [ 1900714 ] User Custom Headers Patch
 - Add option to include iCalendar attachment to emails for both
   reminders and notifications
 - Add option to include iCalendar attachment to reminder emails
 - Apply PATCH [ 1878056 ] Call toggle_datefields() JavaScript function with onClick
 - Apply PATCH [ 1894150 ] corrections to 'translations/Italian.txt'
 - Fix bug [ 1844751 ] Events on Sundays not displayed in DayByTime view
   (thanks neufeind)
 - Fix bug [ 1882034 ] weekly repeat not showing in first week of some months
   (thanks neufeind)
 - Apply patch [ 1895173 ] Fix for reminder-format
 - Fix bug [ 1893997 ] iCal export from Outlook over https (thanks neufeind)
 - Fix bug: not auth for certain events where public is participant
 - Fix bug: 'Remote Calendar' menu link not brining up correct tab on page
 - Fix bug: single quote in nonuser name causes JS error
 - Fix bug [ 1851371 ] Notification not sent on description change
 - Fix bug [ 1839882 ] help/guide pages blocked (non auth)
 - Fix bug [ 1851209 ] advanced search doesn't show on public calendar
 - Fix bug [ 1814525 ] Repeating event deletion
 - Apply PATCH [ 1802793 ] iCS export - LDAP - Empty Attendee's info
 - Security fix 1826571: misc XSS issues
 - Modified iCalendar output to correct ATTENDEE output to conform to
   RFC2445; fixed attendee to user login if no fullname info available.
 - Modified iCalendar output to avoid bug in Sunbird 0.7.
 - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
 - Added new rss_unapproved.php that will generate RSS 2.0 listing