@@ -37,7 +37,7 @@
 #        usually three-letter, month abbreviation (like "Oct" for "October").
 #
 # $Id$
-# Translation last updated on 03-03-2008
+# Translation last updated on 03-06-2008
 
 
 ################################################################################
@@ -327,6 +327,17 @@ nonuser-enabled-help: If enabled, admins will have the option to add nonuser cal
 Nonuser enabled: Nonuser Calendars Enabled
 nonuser-list-help: Where to display the nonuser calendars in the participant list
 Nonuser list: Display in participants list at
+Upcoming Events: Upcoming Events
+upcoming-events-help: Enable upcoming.php
+Enabled: Enabled
+upcoming-events-allow-override: Allow user paramter for upcoming.php
+Allow user override: Allow user override
+upcoming-events-display-layers: Display layers in upcoming.php
+Display layers: Display layers
+upcoming-events-display-links: Display links in upcoming.php
+Display links to events: Display links to events
+upcoming-events-display-popups: Display event popups in upcoming.php
+Display event popups: Display event popups
 reports-enabled-help: If enabled, users will see a "Reports" section at the bottom of each page and will be allowed to create custom reports. Additionally, admin users can create global reports that will appear at the bottom of all users' pages.
 Reports enabled: Reports enabled
 subscriptions-enabled-help: Specifies if remote users can subscribe to a WebCalendar user's calendar, allowing them to see the WebCalendar user's events in their iCal-enabled application (such as Apple's iCal or Mozilla Calendar).
@@ -809,7 +820,6 @@ Username: Username
 E-mail address: E-mail address
 Password: Password
 again: again
-Enabled: Enabled
 Disabled for demo: Disabled for demo
 Change Password: Change Password
 New Password: New Password
@@ -846,6 +856,11 @@ export format not defined or incorrect: export format not defined or incorrect
 No user specified.: No user specified.
 
 ########################################
+# Page: groups.php
+#
+Add New Group: Add New Group
+
+########################################
 # Page: group_edit.php
 #
 Unnamed Group: Unnamed Group
@@ -859,11 +874,6 @@ Created by: Created by
 # Page: group_edit_handler.php
 #
 You must specify a group name: You must specify a group name
-
-########################################
-# Page: groups.php
-#
-Add New Group: Add New Group
 
 ########################################
 # Page: help_admin.php
@@ -1262,6 +1272,33 @@ listid: listid
 Reset: Reset
 
 ########################################
+# Page: views.php
+#
+Add New View: Add New View
+
+########################################
+# Page: views_edit.php
+#
+Unnamed View: Unnamed View
+Add View: Add View
+Edit View: Edit View
+View Name: View Name
+View Type: View Type
+Day by Time: Day by Time
+Week (Users horizontal): Week (Users horizontal)
+Week by Time: Week by Time
+Week (Users vertical): Week (Users vertical)
+Week (Timebar): Week (Timebar)
+Month (Timebar): Month (Timebar)
+Month (side by side): Month (side by side)
+Month (on same calendar): Month (on same calendar)
+
+########################################
+# Page: views_edit_handler.php
+#
+You must specify a view name: You must specify a view name
+
+########################################
 # Page: view_d.php
 #
 No users for this view: No users for this view
@@ -1311,33 +1348,6 @@ Palm Pilot: Palm Pilot
 # Page: view_m.php
 #
 Double-click on empty cell to add new entry: Double-click on empty cell to add new entry.
-
-########################################
-# Page: views.php
-#
-Add New View: Add New View
-
-########################################
-# Page: views_edit.php
-#
-Unnamed View: Unnamed View
-Add View: Add View
-Edit View: Edit View
-View Name: View Name
-View Type: View Type
-Day by Time: Day by Time
-Week (Users horizontal): Week (Users horizontal)
-Week by Time: Week by Time
-Week (Users vertical): Week (Users vertical)
-Week (Timebar): Week (Timebar)
-Month (Timebar): Month (Timebar)
-Month (side by side): Month (side by side)
-Month (on same calendar): Month (on same calendar)
-
-########################################
-# Page: views_edit_handler.php
-#
-You must specify a view name: You must specify a view name
 
 ########################################
 # Page: week_details.php
