@@ -15,6 +15,7 @@ Version 1.3.0 (?? ??? 2007)
       + In some pages (week, month, day), the '+' icon has been removed.
         Users can double-click on the table cell to add an event.
       + New Security Audit report
+      + Moved hard-coded upcoming.php config setting to System Settings.
   - The following translations were updated:
     French, Indonesian
 
